refactor: Se actualiza la ruta para generar tokens
