# docs/swagger.json
@@ -91,7 +91,7 @@
                 }
             }
         },
-        "/user/login": {
+        "/user/auth": {
             "post": {
                 "description": "create token for access",
                 "consumes": [
@@ -103,15 +103,15 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Login user",
+                "summary": "Authenticate user",
                 "parameters": [
                     {
-                        "description": "Login data",
+                        "description": "Authentication data",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.LoginRequest"
+                            "$ref": "#/definitions/model.AuthRequest"
                         }
                     }
                 ],
@@ -205,6 +205,21 @@
         }
     },
     "definitions": {
+        "model.AuthRequest": {
+            "type": "object",
+            "required": [
+                "email",
+                "uuid"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "uuid": {
+                    "type": "string"
+                }
+            }
+        },
         "model.CreateRequest": {
             "type": "object",
             "required": [
@@ -233,21 +248,6 @@
                     "type": "integer"
                 },
                 "updated_at": {
-                    "type": "string"
-                },
-                "uuid": {
-                    "type": "string"
-                }
-            }
-        },
-        "model.LoginRequest": {
-            "type": "object",
-            "required": [
-                "email",
-                "uuid"
-            ],
-            "properties": {
-                "email": {
                     "type": "string"
                 },
                 "uuid": {
